--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
+    "clsx": "2.1.1",
+    "lucide-react": "0.463.0",
+    "qrcode.react": "3.1.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "lucide-react": "0.463.0",
-    "react-router-dom": "7.1.3",
-    "clsx": "2.1.1",
-    "qrcode.react": "3.1.0"
+    "react-router-dom": "7.1.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
