--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,17 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# temporários / dumps
+_*.txt
+ids.txt
+
+# scripts de diagnóstico locais
+diagnose_*.mjs
+test_*.mjs
+verify_*.mjs
+check_*.mjs
+surgical_*.mjs
+
+# agentes temporários
+.agent/agents/*-new.md
